[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rst2gemtext"
version = "0.5.0"
authors = [
    {name = "Fabien LOISON"},
]
description = "Converts reStructuredText to Gemtext (Gemini markup format)"
readme = "README.rst"
keywords = [
    "restructuredtext", "rst", "convert", "gemtext",
    "gmi", "gemini", "docutils"
]
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
requires-python = ">=3.9"
dependencies = [
    "docutils",
    "pygments",
]

[project.optional-dependencies]
dev = [
    "nox",
    "flit",
    "black",
    "flake8",
    "flake8-pyproject",
    "validate-pyproject",
    "pytest",
]

[project.scripts]
rst2gemtext = "rst2gemtext:main"

[project.urls]
source = "https://github.com/flozz/rst2gemtext"
documentation = "https://github.com/flozz/rst2gemtext/blob/master/README.rst"
changelog = "https://github.com/flozz/rst2gemtext?tab=readme-ov-file#changelog"
issues = "https://github.com/flozz/rst2gemtext/issues"
Chat = "https://discord.gg/P77sWhuSs4"
donate = "https://github.com/flozz/rst2gemtext#support-this-project"

[tool.black]
target-version = ["py39"]

[tool.flake8]
ignore = [
    # ↓↓ Black handles that its way... :)
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
    "E501",  # line too long (> 79 characters)
]
